# plz-cli

./: Cargo.toml
.github/workflows/: release.yml
src/: git.rs  gitmoji.rs  main.rs  prompts.rs
src/chat_gpt/: completions.rs
